small styling fixes with height overflow

--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -9,7 +9,7 @@ nav {
     max-width: 200px;
 
     nav {
-        height: 75vh;
+        height: 100%;    
     }
 
     .link {
