--- a/src/index.scss
+++ b/src/index.scss
@@ -11,6 +11,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: var(--primary-bg);
 }
 
 code {
@@ -20,7 +21,7 @@ code {
 
 .container {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: flex;
 }
 
